# cloudvocal

./: .gitignore  CMakeLists.txt  README.md  buildspec.json  conanfile.txt  conanfile_win.txt
.github/actions/build-plugin/: action.yaml
.github/scripts/: .Aptfile  .Brewfile  .build.zsh
.github/workflows/: build-project.yaml  push.yaml
cmake/: BuildClovaAPIs.cmake  BuildDependencies.cmake  BuildGRPCpp.cmake  BuildGoogleAPIs.cmake  BuildMyCurl.cmake  FetchNlohmannJSON.cmake
cmake/common/: buildspec_common.cmake  compiler_common.cmake
cmake/linux/: compilerconfig.cmake
cmake/macos/: compilerconfig.cmake  xcode.cmake
cmake/windows/: compilerconfig.cmake
data/locale/: en-US.ini
src/: cloudvocal-callbacks.cpp  cloudvocal-callbacks.h  cloudvocal-data.h  cloudvocal-processing.cpp  cloudvocal-processing.h  cloudvocal-properties.cpp  cloudvocal-utils.cpp  cloudvocal-utils.h  cloudvocal.c  cloudvocal.cpp  cloudvocal.h  plugin-main.c  plugin-support.c.in  plugin-support.h
src/cloud-providers/: cloud-provider.cpp  cloud-provider.h
src/cloud-providers/aws/: CMakeLists.txt  aws_provider.cpp  aws_provider.h  aws_sdk_provider.cpp  eventstream.cpp  eventstream.h  main.cpp  presigned_url.cpp  presigned_url.h
src/cloud-providers/clova/: clova-provider.cpp  clova-provider.h  clova-realtime.cpp  nest.proto
src/cloud-providers/deepgram/: deepgram-provider.cpp  deepgram-provider.h  live_audio_api.md  websocket_api.md
src/cloud-providers/google/: google-provider.cpp  google-provider.h
src/cloud-providers/revai/: WebSocket protocol.md  revai-provider.cpp  revai-provider.h  revai_api_docs.md
src/cloud-translation/: CMakeLists.txt  azure.cpp  claude.cpp  custom-api.cpp  deepl.cpp  google-cloud.cpp  google-cloud.h  language-codes.cpp  language-codes.h  openai.cpp  papago.cpp  papago.h  translation-cloud.cpp
src/language-codes/: language-codes.cpp  language-codes.h
src/ssl-utils/: ssl-utils.cpp  ssl-utils.h
src/timed-metadata/: timed-metadata-utils.cpp  timed-metadata-utils.h
src/utils/: curl-helper.cpp  curl-helper.h  ssl-utils.cpp  ssl-utils.h
